--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,7 +76,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/selector_bg_edit"
-                        android:hint="@string/Username"
+                        android:hint="@string/email"
                         android:inputType="textPersonName"
                         android:paddingBottom="2dp"
                         android:textColor="#2fa881"
@@ -102,7 +102,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/selector_bg_edit"
-                        android:hint="@string/Password"
+                        android:hint="@string/password"
                         android:inputType="textPassword"
                         android:paddingBottom="2dp"
                         android:textColor="#2fa881"
