--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,22 +18,32 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <FrameLayout
         android:layout_width="320dp"
-        android:layout_height="400dp"
-        android:layout_centerInParent="true"
-        android:paddingTop="70dp">
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|top"
+            android:src="@drawable/ic_close"
+            android:transitionName="loginFab"
+            app:backgroundTint="@color/white"
+            app:fabSize="normal" />
 
         <android.support.v7.widget.CardView
-            android:id="@+id/cv_add"
+            android:id="@+id/register_cardview"
             android:layout_width="match_parent"
-            android:layout_height="320dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
-            app:cardBackgroundColor="#2ea67f"
+            app:cardBackgroundColor="@color/colorPrimary"
             app:cardCornerRadius="6dp"
             app:cardElevation="3dp"
             app:cardUseCompatPadding="true">
@@ -66,99 +76,168 @@
                         android:textColorHint="#f0f7f4"
                         android:theme="@style/TextLabel">
 
-                        <EditText
-                            android:id="@+id/et_username"
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/name_et"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/selector_bg_edit_2"
-                            android:hint="@string/Username"
+                            android:hint="@string/name"
                             android:inputType="textPersonName"
                             android:paddingBottom="2dp"
                             android:textColor="#f0f7f4"
-                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
-                            android:textSize="13sp" />
+                            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp"
                     android:paddingEnd="30dp"
                     android:paddingStart="50dp">
 
                     <android.support.design.widget.TextInputLayout
-
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColorHint="#f0f7f4"
                         android:theme="@style/TextLabel">
 
                         <EditText
-                            android:id="@+id/et_password"
+                            android:id="@+id/college_et"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/selector_bg_edit_2"
-                            android:hint="@string/Password"
-                            android:inputType="textPassword"
+                            android:hint="@string/aadhaar"
+                            android:inputType="textPersonName"
                             android:paddingBottom="2dp"
                             android:textColor="#f0f7f4"
-                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
-                            android:textSize="13sp" />
+                            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
+                    android:paddingEnd="30dp"
+                    android:paddingStart="50dp">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="#f0f7f4"
+                        android:theme="@style/TextLabel">
+
+                        <EditText
+                            android:id="@+id/mobile_et"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/selector_bg_edit_2"
+                            android:hint="@string/mobile"
+                            android:inputType="phone"
+                            android:paddingBottom="2dp"
+                            android:textColor="#f0f7f4"
+                            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp"
+                    android:paddingEnd="30dp"
+                    android:paddingStart="50dp">
+
+                    <com.ssn.skillindia.LabelledSpinner
+                        android:id="@+id/state_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        custom:labelText="@string/state_spinner_label"
+                        custom:widgetColor="@color/colorAccent" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
+                    android:paddingEnd="30dp"
+                    android:paddingStart="50dp">
+
+                    <com.ssn.skillindia.LabelledSpinner
+                        android:id="@+id/district_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        custom:labelText="@string/state_spinner_label"
+                        custom:widgetColor="@color/colorAccent" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
                     android:paddingEnd="30dp"
                     android:paddingStart="50dp">
 
                     <android.support.design.widget.TextInputLayout
-
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColorHint="#f0f7f4"
                         android:theme="@style/TextLabel">
 
                         <EditText
-                            android:id="@+id/et_repeatpassword"
+                            android:id="@+id/email_et"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/selector_bg_edit_2"
-                            android:hint="@string/repeat_password"
+                            android:hint="@string/email"
+                            android:inputType="textEmailAddress"
+                            android:paddingBottom="2dp"
+                            android:textColor="#f0f7f4"
+                            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal"
+                    android:paddingEnd="30dp"
+                    android:paddingStart="50dp">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="#f0f7f4"
+                        android:theme="@style/TextLabel">
+
+                        <EditText
+                            android:id="@+id/password_et"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/selector_bg_edit_2"
+                            android:hint="@string/password"
                             android:inputType="textPassword"
                             android:paddingBottom="2dp"
                             android:textColor="#f0f7f4"
-                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
-                            android:textSize="13sp" />
+                            android:textCursorDrawable="@drawable/bg_input_cursor_2" />
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/bt_go"
+                    android:id="@+id/go_btn"
                     android:layout_width="150dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="20dp"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/bt_shape_2"
+                    android:onClick="goOnClick"
                     android:stateListAnimator="@drawable/state_list_animator_z"
-                    android:text="@string/next"
-                    android:textColor="#2fa881"></Button>
-
+                    android:text="@string/go"
+                    android:textColor="@color/colorPrimary" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|top"
-            android:src="@drawable/plus_x"
-            android:transitionName="loginFab"
-            app:fabSize="normal" />
     </FrameLayout>
-
-
 </RelativeLayout>
