--- a/app/src/main/res/drawable/splashscreen.xml
+++ b/app/src/main/res/drawable/splashscreen.xml
@@ -16,14 +16,13 @@
   ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
   -->
 
-<resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <color name="white">#FFFFFFFF</color>
+    <item android:drawable="@color/colorPrimary" />
 
-    <color name="skill_india_text">#323232</color>
-    <color name="skill_india_text_dark">#000000</color>
-    <color name="skill_india_text_light">#686E71</color>
-</resources>
+    <item>
+        <bitmap
+            android:gravity="center"
+            android:src="@mipmap/ic_launcher_round" />
+    </item>
+</layer-list>
