--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,15 +33,14 @@
         <item name="android:windowBackground">@drawable/splashscreen</item>
     </style>
 
-    <style name="Translucent" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimaryDark">#0288D1</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowIsTranslucent">true</item>
+    <style name="HelloTheme" parent="Theme.AppCompat.Light.NoActionBar" />
 
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="TextLabel" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
-        <item name="colorControlActivated">#FFCC00</item>
-    </style>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
