--- a/app/src/main/res/layout/activity_search_training_center.xml
+++ b/app/src/main/res/layout/activity_search_training_center.xml
@@ -22,21 +22,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.ssn.skillindia.LabelledSpinner
+    <com.ssn.skillindia.ui.LabelledSpinner
         android:id="@+id/state_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         custom:labelText="@string/state_spinner_label"
         custom:widgetColor="@color/colorAccent" />
 
-    <com.ssn.skillindia.LabelledSpinner
+    <com.ssn.skillindia.ui.LabelledSpinner
         android:id="@+id/district_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         custom:labelText="@string/district_spinner_label"
         custom:widgetColor="@color/colorAccent" />
 
-    <com.ssn.skillindia.LabelledSpinner
+    <com.ssn.skillindia.ui.LabelledSpinner
         android:id="@+id/sector_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
