:art: Switch to Instincts Icons

--- a/app/src/main/res/layout/intro2.xml
+++ b/app/src/main/res/layout/intro2.xml
@@ -50,7 +50,7 @@
             android:layout_gravity="center"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:src="@mipmap/ic_launcher_round" />
+            android:src="@mipmap/ic_launcher" />
     </LinearLayout>
 
     <TextView
