--- a/app/src/main/res/drawable/ic_marker_inactive.xml
+++ b/app/src/main/res/drawable/ic_marker_inactive.xml
@@ -1,4 +1,27 @@
-<vector android:height="24dp" android:viewportHeight="426.667"
-    android:viewportWidth="426.667" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M213.3,0C95.5,0 0,95.5 0,213.3s95.5,213.3 213.3,213.3s213.3,-95.5 213.3,-213.3S331.2,0 213.3,0zM213.3,387.4c-96.1,0 -174.1,-77.9 -174.1,-174.1s77.9,-174.1 174.1,-174.1c96.1,0.1 174,78 174.1,174.1C387.4,309.5 309.5,387.4 213.3,387.4z"/>
+<!--
+  ~ Skill India
+  ~ Copyright (C) 2017  e-LEMON-ators
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation, either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  This program is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
+  -->
+
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="426.667"
+    android:viewportWidth="426.667">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M213.3,0C95.5,0 0,95.5 0,213.3s95.5,213.3 213.3,213.3s213.3,-95.5 213.3,-213.3S331.2,0 213.3,0zM213.3,387.4c-96.1,0 -174.1,-77.9 -174.1,-174.1s77.9,-174.1 174.1,-174.1c96.1,0.1 174,78 174.1,174.1C387.4,309.5 309.5,387.4 213.3,387.4z" />
 </vector>
