--- a/app/src/main/res/layout/fragment_search_training_center.xml
+++ b/app/src/main/res/layout/fragment_search_training_center.xml
@@ -20,6 +20,7 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="8dp"
     android:orientation="vertical">
 
     <com.ssn.skillindia.ui.LabelledSpinner
@@ -43,4 +44,8 @@
         custom:labelText="@string/sector_spinner_label"
         custom:widgetColor="@color/colorAccent" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/training_centers_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
