--- a/app/src/main/res/menu/menu_training_center_detail.xml
+++ b/app/src/main/res/menu/menu_training_center_detail.xml
@@ -16,14 +16,13 @@
   ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
   -->
 
-<resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_size_normal">100dp</dimen>
-    <dimen name="text_size">12sp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="appbar_padding_top">8dp</dimen>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item name="body_1_spacing" format="float" type="dimen">1.2</item>
-</resources>
+    <item
+        android:id="@+id/action_map"
+        android:icon="@drawable/ic_pin_drop"
+        android:orderInCategory="100"
+        android:title="Map"
+        app:showAsAction="always" />
+</menu>
