--- a/app/src/main/res/layout/intro3.xml
+++ b/app/src/main/res/layout/intro3.xml
@@ -33,7 +33,7 @@
         android:gravity="center"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
-        android:text="Emergency?"
+        android:text="Wish to make a change ?"
         android:textColor="#ffffff"
         android:textSize="28sp" />
 
@@ -59,7 +59,7 @@
             android:gravity="center"
             android:paddingLeft="64dp"
             android:paddingRight="64dp"
-            android:text="Help is only a tap away"
+            android:text="Come join hands with us!"
             android:textColor="#ffffff"
             android:textSize="16sp" />
 
