--- a/app/src/main/res/layout/fragment_check_course_progress.xml
+++ b/app/src/main/res/layout/fragment_check_course_progress.xml
@@ -17,23 +17,13 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/check_progress_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        app:tabIndicatorColor="#FFF"
-        app:tabMode="scrollable"
-        app:tabSelectedTextColor="#FFF"
-        app:tabTextColor="#DDD" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/container"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/check_progress_tabs" />
+        android:clipToPadding="false"
+        android:padding="10dp" />
 </RelativeLayout>
