--- a/app/src/main/res/layout/intro1.xml
+++ b/app/src/main/res/layout/intro1.xml
@@ -21,10 +21,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="10"
-    android:background="@drawable/splashscreen"
+    android:background="@color/primary"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="64dp" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_launcher_web" />
 </LinearLayout>
