--- a/app/src/main/res/layout/activity_switch.xml
+++ b/app/src/main/res/layout/activity_switch.xml
@@ -22,7 +22,6 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context="com.ssn.skillindia.activities.SwitchActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -57,8 +56,8 @@
     <com.roughike.bottombar.BottomBar
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="72dp"
         android:layout_alignParentBottom="true"
-        app:bb_behavior="shifting"
+        app:bb_behavior="shifting|underNavbar"
         app:bb_tabXmlResource="@xml/bottombar_tabs" />
 </RelativeLayout>
