--- a/app/src/main/res/layout/fragment_dashboard_learner.xml
+++ b/app/src/main/res/layout/fragment_dashboard_learner.xml
@@ -64,7 +64,9 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:foreground="?selectableItemBackground"
+                android:onClick="searchTrainingCenterOnClick">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -98,7 +100,9 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:foreground="?selectableItemBackground"
+                android:onClick="webinarsOnClick">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -165,7 +169,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:foreground="?selectableItemBackground"
                     android:gravity="center"
                     android:orientation="vertical">
 
