--- a/app/src/main/res/xml/bottombar_tabs.xml
+++ b/app/src/main/res/xml/bottombar_tabs.xml
@@ -24,14 +24,14 @@
         title="Learner" />
 
     <tab
-        barColorWhenSelected="#5D4037"
+        barColorWhenSelected="@color/brown"
         icon="@drawable/ic_trainer"
         id="@+id/tab_trainer"
         title="Trainer" />
 
     <tab
-        barColorWhenSelected="#7B1FA2"
-        icon="@drawable/ic_private_sector"
-        id="@+id/tab_private_sector"
-        title="Private Sector" />
+        barColorWhenSelected="@color/purple"
+        icon="@drawable/ic_training_partner"
+        id="@+id/tab_training_partner"
+        title="Training Partner" />
 </tabs>
